feat: sync bot and web app for 2026-2027
